--- a/WeatherApp/app/src/main/AndroidManifest.xml
+++ b/WeatherApp/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WeatherApp">
+        android:theme="@style/Theme.WeatherApp"
+        android:name="com.example.weatherapp.main.AppWeather">
         <activity
             android:name=".MainActivity"
             android:exported="true">
